--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p class="display-3 headingText text-center">Things I've Worked On</p>
             </div>
             <div class="mb-5">
-                <p class="h3 text-center contentText">If you think I'll be a great addition to your team?<br/> Here's my <a class="text-reset text-decoration-none px-1 resume" href="{{ url_for('static',filename='Resume.pdf') }}" target="_blank">resume.</a></p>
+                <p class="h3 text-center contentText">If you think I'll be a great addition to your team?<br/> Here's my <a class="text-reset text-decoration-none px-1 resume" href="./static/Resume.pdf" target="_blank">resume.</a></p>
             </div>
             <div class="card shadow contentText">
                 <div class="card-body">
