--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
-                <a class="navbar-brand" href="#"><p class="display-4">A.</p></a>
+                <a class="navbar-brand" href="#"><p class="display-4">AG.</p></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navToggle" aria-controls="navToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -33,9 +33,9 @@
                 <div class="col-10 col-md-6 mx-auto text-center">
                     <h1 class="headingText mt-2 mb-3 pb-2">Anshum Gill</h1>
                     <p class="intro contentText text-center lead p-3">
-                        Hi! I'm a B.Tech CSE Graduate and currently I'm working at Hughes Systique as an Engineer Trainee.
-                        I have knowledge in various domains such as IoT, ML, Deep Learning, Neural Networks,
-                        Frontend Development etc. I've done most of my development in Python but am open to any language.
+                        Hi! I'm a B.Tech CSE Graduate currently working at Hughes Systique as an Engineer Trainee.
+                        I have knowledge in various domains such as ML, Deep Learning, Neural Networks,
+                        Frontend Development, IoT etc. I've done most of my development in Python but am open to learn any language.
                     </p>
                     <div class="socials mt-3 nonImpText">
                         <div class="d-flex flex-row justify-content-around">
