--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     </p>
                     <div class="socials mt-3 nonImpText">
                         <div class="d-flex flex-row justify-content-around">
-                            <a class="text-reset" href="https://www.linkedin.com/in/anshum-gill/" target="_blank"><i data-feather="linkedin" fill="currentColor" stroke="none" height="20"></i></a>
-                            <a class="text-reset" href="https://www.github.com/anshumgill" target="_blank"><i data-feather="github" height="20"></i></a>
-                            <a class="text-reset" href="https://www.instagram.com/anshum_gill/" target="_blank"><i data-feather="instagram" height="20"></i></a>
-                            <a class="text-reset" href="https://www.facebook.com/AnShUmGilL1997/" target="_blank"><i data-feather="facebook" fill="currentColor" stroke="none" height="20"></i></a>
+                            <a class="text-reset social-icon" href="https://www.linkedin.com/in/anshum-gill/" target="_blank"><i data-feather="linkedin" fill="currentColor" stroke="none" height="20"></i></a>
+                            <a class="text-reset social-icon" href="https://www.github.com/anshumgill" target="_blank"><i data-feather="github" height="20"></i></a>
+                            <a class="text-reset social-icon" href="https://www.instagram.com/anshum_gill/" target="_blank"><i data-feather="instagram" height="20"></i></a>
+                            <a class="text-reset social-icon" href="https://www.facebook.com/AnShUmGilL1997/" target="_blank"><i data-feather="facebook" fill="currentColor" stroke="none" height="20"></i></a>
                         </div>                             
                     </div>
                 </div>
@@ -274,8 +274,8 @@
                     <div class="d-flex flex-column align-items-center">
                         <p class="h5 pb-1 footer-headings"><strong>REACH ME</strong></p>
                         <div class="d-flex flex-row justify-content-around w-100 pt-2">
-                            <p class="text-center mb-0"><i data-feather="smartphone"></i><br/>+91-981129033</p>
-                            <p class="text-center mb-0"><i data-feather="mail"></i><br/>anshumgill@gmail.com</p>
+                            <a href="#" class="text-reset text-decoration-none"><p class="text-center mb-0 social-icon"><i data-feather="smartphone"></i><br/>+91-981129033</p></a>
+                            <a href="#" class="text-reset text-decoration-none"><p class="text-center mb-0 social-icon"><i data-feather="mail"></i><br/>anshumgill@gmail.com</p></a>
                         </div>
                     </div>
                 </div>
@@ -283,10 +283,10 @@
                     <div class="d-flex flex-column align-items-center h-100">
                         <p class="h5 pb-1 footer-headings"><strong>SOCIAL</strong></p>
                         <div class="d-flex flex-row justify-content-around w-100 pt-2 mt-auto">
-                            <a class="text-reset" href="https://www.linkedin.com/in/anshum-gill/" target="_blank"><i data-feather="linkedin" fill="currentColor" stroke="none"></i></a>
-                            <a class="text-reset" href="https://www.github.com/anshumgill" target="_blank"><i data-feather="github"></i></a>
-                            <a class="text-reset" href="https://www.instagram.com/anshum_gill/" target="_blank"><i data-feather="instagram"></i></a>
-                            <a class="text-reset" href="https://www.facebook.com/AnShUmGilL1997/" target="_blank"><i data-feather="facebook" fill="currentColor" stroke="none"></i></a>
+                            <a class="text-reset social-icon" href="https://www.linkedin.com/in/anshum-gill/" target="_blank"><i data-feather="linkedin" fill="currentColor" stroke="none"></i></a>
+                            <a class="text-reset social-icon" href="https://www.github.com/anshumgill" target="_blank"><i data-feather="github"></i></a>
+                            <a class="text-reset social-icon" href="https://www.instagram.com/anshum_gill/" target="_blank"><i data-feather="instagram"></i></a>
+                            <a class="text-reset social-icon" href="https://www.facebook.com/AnShUmGilL1997/" target="_blank"><i data-feather="facebook" fill="currentColor" stroke="none"></i></a>
                         </div>
                     </div>
                 </div>
