--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./static/css/bootstrap.min.css">
     <link rel="stylesheet" href="./static/css/style.css">
     <script src="./static/js/feather.min.js"></script>
+    <link rel="stylesheet" href="./static/css/aos.css"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap" rel="stylesheet">
 </head>
 <body class="d-flex flex-column h-100">
@@ -48,14 +49,14 @@
                 </div>
             </div>
         </div>
-        <div class="container d-flex flex-column align-items-center mt-4" id="projects">
+        <div class="container d-flex flex-column align-items-center mt-4" id="projects" data-aos="fade-up">
             <div>
                 <p class="display-3 headingText text-center">Things I've Worked On</p>
             </div>
             <div class="mb-5">
                 <p class="h3 text-center contentText">If you think I'll be a great addition to your team?<br/> Here's my <a class="text-reset text-decoration-none px-1 resume" href="./static/Resume.pdf" target="_blank">resume.</a></p>
             </div>
-            <div class="card shadow contentText">
+            <div class="card shadow contentText" data-aos="fade-up">
                 <div class="card-body">
                     <h4 class="card-title mb-4">Pneumothorax Identification</h4>
                     <div class="row">
@@ -81,7 +82,7 @@
                     </div>                    
                 </div>
             </div>
-            <div class="card shadow contentText">
+            <div class="card shadow contentText" data-aos="fade-up">
                 <div class="card-body">
                     <h4 class="card-title mb-4">Image Classification</h4>
                     <div class="row">
@@ -108,7 +109,7 @@
                     </div>                    
                 </div>
             </div>     
-            <div class="card shadow contentText">
+            <div class="card shadow contentText" data-aos="fade-up">
                 <div class="card-body">
                     <h4 class="card-title mb-4">Ecommerce Website
                     </h4>
@@ -138,7 +139,7 @@
                     </div>                    
                 </div>
             </div>  
-            <div class="card shadow contentText">
+            <div class="card shadow contentText" data-aos="fade-up">
                 <div class="card-body">
                     <h4 class="card-title mb-4">Voting Application
                     </h4>
@@ -167,7 +168,7 @@
                     </div>                    
                 </div>
             </div> 
-            <div class="card shadow contentText">
+            <div class="card shadow contentText" data-aos="fade-up">
                 <div class="card-body">
                     <h4 class="card-title mb-4">Global Warming Assessment
                     </h4>
@@ -196,7 +197,7 @@
                     </div>                    
                 </div>
             </div>  
-            <div class="card shadow contentText">
+            <div class="card shadow contentText" data-aos="fade-up">
                 <div class="card-body">
                     <h4 class="card-title mb-4">EDA Projects
                     </h4>
@@ -233,7 +234,7 @@
                     </div>                    
                 </div>
             </div>
-            <div class="card shadow contentText">
+            <div class="card shadow contentText" data-aos="fade-up">
                 <div class="card-body">
                     <h4 class="card-title mb-4">Movie Ticket Reservation System
                     </h4>
@@ -298,6 +299,10 @@
     <script src="./static/js/jquery-3.4.1.slim.min.js"></script>
     <script src="./static/js/popper.min.js"></script>
     <script src="./static/js/bootstrap.min.js"></script>
+    <script src="./static/js/aos.js"></script>
+    <script>
+        AOS.init()
+    </script>
     <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
