Added Web Dev Projects

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                 <div class="card-body">
                     <h4 class="card-title mb-4">Pneumothorax Identification</h4>
                     <div class="row">
-                        <div class="col-12 col-md-6 pd-2 card-text">
+                        <div class="col-12 col-md-6  card-text">
                             <p>Internship project in which Image segmentation was performed on a dataset consisting of Lung X-rays and masks were drawn for predicted areas of Pneumothorax in the X-ray using Encoded UNet Network.
                             </p>
                         </div>
-                        <div class="col-12 col-md-6 pd-2">
+                        <div class="col-12 col-md-6 ">
                             <div class="d-flex flex-column">
                                 <div class="icons align-self-end">
                                     <a class="text-white px-1" href="https://github.com/AnshumGill/dl-pneumothorax" target="_blank">
@@ -86,11 +86,11 @@
                 <div class="card-body">
                     <h4 class="card-title mb-4">Image Classification</h4>
                     <div class="row">
-                        <div class="col-12 col-md-6 pd-2 card-text">
+                        <div class="col-12 col-md-6  card-text">
                             <p>Image Classification was performed using Random Forest and SVM Classifier on 200 photos of flowers clicked personally containing 10 classes each with 20 pictures.
                             </p>
                         </div>
-                        <div class="col-12 col-md-6 pd-2">
+                        <div class="col-12 col-md-6 ">
                             <div class="d-flex flex-column">
                                 <div class="icons align-self-end">
                                     <a class="text-white px-1" href="https://github.com/AnshumGill/python-ml-flower" target="_blank">
@@ -114,11 +114,11 @@
                     <h4 class="card-title mb-4">Ecommerce Website
                     </h4>
                     <div class="row">
-                        <div class="col-12 col-md-6 pd-2 card-text">
+                        <div class="col-12 col-md-6  card-text">
                             <p>Django based ecommerce website. This was my first website which I developed on Django framework. Decided to learn Django and make an ecommerce website for my mother's bakery.<br/>This was hosted on an EC2 instance on AWS where requests were handled by uWSGI and NGINX.
                             </p>
                         </div>
-                        <div class="col-12 col-md-6 pd-2">
+                        <div class="col-12 col-md-6 ">
                             <div class="d-flex flex-column">
                                 <div class="icons align-self-end">
                                     <a class="text-white px-1" href="https://github.com/AnshumGill/django-ecommerce" target="_blank">
@@ -141,14 +141,55 @@
             </div>  
             <div class="card shadow contentText" data-aos="fade-up">
                 <div class="card-body">
+                    <h4 class="card-title mb-4">Web Dev Projects
+                    </h4>
+                    <div class="row">
+                        <div class="col-12 col-md-6  card-text">
+                            <div>
+                    			<a href="https://nbliving.in" class="text-decoration-none text-reset webdev-heading pb-2 " target="_blank">
+                    				<p class="h5 mb-3">NB Living</p>
+                    			</a>
+                    			<p>Ecommerce Website developed on Shopify Platform from scratch.</p>
+                            </div>
+                            <div>
+                    			<a href="https://vsmunrodesigns.com" class="text-decoration-none text-reset webdev-heading pb-2" target="_blank"><p class="h5 mb-3">VS Munro Designs</p></a>
+                    			<p>Showcase website developed in Angular.</p>
+                            </div>
+                            <div>
+                    			<a href="https://awsum.life" class="text-decoration-none text-reset webdev-heading pb-2" target="_blank"><p class="h5 mb-3">Awsum</p></a>
+                    			<p>Ecommerce Website developed on Shopify Platform from scratch.</p>
+                            </div>
+                            <div>
+                    			<a href="https://mehak-spices.netlify.app/" class="text-decoration-none text-reset webdev-heading pb-2" target="_blank"><p class="h5 mb-3">Mehak Spices</p></a>
+                    			<p>Showcase website developed in Angular<br/><small>(Under Development)</small></p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 ">
+                            <div class="d-flex flex-column">
+                                <div class="d-flex flex-row flex-wrap mt-2">
+                                    <p class="px-3 py-1 mx-1 tag rounded-pill">Angular</p>
+                                    <p class="px-3 py-1 mx-1 tag rounded-pill">Shopify</p>
+                                    <p class="px-3 py-1 mx-1 tag rounded-pill">PayU</p>
+                                    <p class="px-3 py-1 mx-1 tag rounded-pill">HTML</p>
+                                    <p class="px-3 py-1 mx-1 tag rounded-pill">CSS</p>   
+                                    <p class="px-3 py-1 mx-1 tag rounded-pill">Git</p>   
+                                    <p class="px-3 py-1 mx-1 tag rounded-pill">Netlify</p>                                
+                                </div>
+                            </div>
+                        </div>
+                    </div>                    
+                </div>
+            </div>    
+            <div class="card shadow contentText" data-aos="fade-up">
+                <div class="card-body">
                     <h4 class="card-title mb-4">Voting Application
                     </h4>
                     <div class="row">
-                        <div class="col-12 col-md-6 pd-2 card-text">
+                        <div class="col-12 col-md-6  card-text">
                             <p>An application where users can cast vote online. Can be scaled from inter company voting to local or national government elections. Blockchain is used to cast and verify votes to make it secure. Frontend is developed in Django.
                             </p>
                         </div>
-                        <div class="col-12 col-md-6 pd-2">
+                        <div class="col-12 col-md-6 ">
                             <div class="d-flex flex-column">
                                 <div class="icons align-self-end">
                                     <a class="text-white px-1" href="https://github.com/AnshumGill/django-voting" target="_blank">
@@ -173,11 +214,11 @@
                     <h4 class="card-title mb-4">Global Warming Assessment
                     </h4>
                     <div class="row">
-                        <div class="col-12 col-md-6 pd-2 card-text">
+                        <div class="col-12 col-md-6  card-text">
                             <p>Using the GlobalLandTemperature Dataset from Kaggle change in Average Land Temperature a Regression Model was made for India with the help of which predictions were made for the future.
                             </p>
                         </div>
-                        <div class="col-12 col-md-6 pd-2">
+                        <div class="col-12 col-md-6 ">
                             <div class="d-flex flex-column">
                                 <div class="icons align-self-end">
                                     <a class="text-white px-1" href="https://github.com/AnshumGill/r-ml-climate" target="_blank">
@@ -202,11 +243,11 @@
                     <h4 class="card-title mb-4">EDA Projects
                     </h4>
                     <div class="row">
-                        <div class="col-12 col-md-6 pd-2 card-text">
+                        <div class="col-12 col-md-6  card-text">
                             <p>EDA was performed after data preprocessing and cleaning to find relevant correlations.<br/>First was Ecommerce Dataset in which Yearly Amount Spent was derived as an equation of other relevant columns such as Avg. Session Length or Length of Membership.<br/>Second was Startups Dataset in which Profit was derived in terms of R&D and Marketing. 
                             </p>
                         </div>
-                        <div class="col-12 col-md-6 pd-2">
+                        <div class="col-12 col-md-6 ">
                             <div class="d-flex flex-column">
                                 <div class="icons align-self-end">
                                     <a class="text-white px-1" href="https://github.com/AnshumGill/python-ml-ecommerce" target="_blank">
@@ -239,11 +280,11 @@
                     <h4 class="card-title mb-4">Movie Ticket Reservation System
                     </h4>
                     <div class="row">
-                        <div class="col-12 col-md-6 pd-2 card-text">
+                        <div class="col-12 col-md-6  card-text">
                             <p>A Movie Ticket Reservation System GUI application was developed in Python using Tkinter with database in SQLite as a college project.
                             </p>
                         </div>
-                        <div class="col-12 col-md-6 pd-2">
+                        <div class="col-12 col-md-6 ">
                             <div class="d-flex flex-column">
                                 <div class="icons align-self-end">
                                     <a class="text-white px-1" href="https://github.com/AnshumGill/python-movieticket" target="_blank">
